# similar-documents-cli

./: .gitignore  Dockerfile  README.md  command.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  similar-entry.py
.github/workflows/: deploy.yaml  test.yaml
similar_documents/: __init__.py  cli.py  cmd_utils.py  similar.py  text_converter.py  tokenizer.py
similar_documents/tests/: cmd_utils_test.py  similar_test.py  text_converter_test.py  tokonezer_test.py
similar_documents/tests/fixtures/: markdown.md
similar_entry/: __init__.py  cli.py  cmd_utils.py  similar.py  text_converter.py  tokenizer.py
similar_entry/tests/: cmd_utils_test.py  similar_entry_test.py  text_converter_test.py  tokonezer_test.py
similar_entry/tests/fixtures/: 1.html  markdown_yaml.md  plain.txt
src/: similar_entry.py  text_converter.py  tokenizer.py
tests/: cmd_utils_test.py  similar_test.py  text_converter_test.py  tokonezer_test.py
tests/fixtures/: markdown_yaml_empty_title.md
