[metadata]
name = similar_documents
version = attr: similar_documents.version
description = Generate similarity scores for documents from cli
author = "Yuichi Tateno"
author_email = hotchpotch@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
keywords = similar documents
license = MIT

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
  bin/similar_documents.py
install_requires =
  Markdown
  markdown-full-yaml-metadata
  numpy
  scipy
  beautifulsoup4
  scikit_learn
  fugashi
  unidic-lite
  importlib; python_version >= "3.7"

