[metadata]
name = similar_documents
version = attr: similar_documents.version
description = Generate similarity scores for documents from cli
author = "Yuichi Tateno"
author_email = hotchpotch@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
keywords = similar, documents
license = MIT
project_urls =
    Source=https://github.com/hotchpotch/similar-documents-cli

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
  bin/similar-documents
install_requires =
  Markdown
  markdown-full-yaml-metadata
  numpy
  scipy
  beautifulsoup4
  scikit_learn
  fugashi
  unidic-lite
  plac
python_requires = >=3.7

[options.extras_require]
testing =
    pytest